# cosmic-ext-applet-drives

./: .gitignore  Cargo.toml  README.md  dev.cappsy.CosmicExtAppletDrives.json  justfile
i18n/en/: cosmic_ext_applet_drives.ftl
resources/: app.desktop  app.metainfo.xml
src/: app.rs  lib.rs
