[package]
name = "cosmic-ext-applet-drives"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
description = "An applet for the COSMIC desktop to manage mounted drives"
repository = "https://github.com/cappsyco/cosmic-ext-applet-drives"

[build-dependencies]
vergen = { version = "8", features = ["git", "gitcl"] }

[dependencies]
drives = "0.6.0"
i18n-embed-fl = "0.9.2"
lfs-core = "0.16.2"
notify-rust = "4.11.7"
open = "5.3.0"
rust-embed = "8.5.0"

[dependencies.i18n-embed]
version = "0.15"
features = ["fluent-system", "desktop-requester"]

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = ["applet", "wayland"]

[features]
flatpak = []

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
similar_names = "allow"
