[package]
name = "cosmic-ext-applet-drives"
version = "0.1.1"
edition = "2024"
license = "GPL-3.0-only"
description = "An applet for the COSMIC desktop to manage mounted drives"
repository = "https://github.com/cosmic-utils/cosmic-ext-applet-drives"

[dependencies]
drives = "0.6.1"
i18n-embed-fl = "0.10.0"
lfs-core = "0.19.2"
notify-rust = "4.12.0"
open = "5.3.3"
procfs = "0.18.0"
rust-embed = "8.11.0"
udev = "0.9.3"

[dependencies.i18n-embed]
version = "0.16.0"
features = ["fluent-system", "desktop-requester"]

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = ["applet", "wayland"]

[features]
flatpak = []

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
similar_names = "allow"
